--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.3.0",
   "author": "Andrew Rapo",
   "copyright": "Copyright (c) 2018 Andrew Rapo. All Rights Reserved",
-  "license": "BSD-3-Clause",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git@github.com:wwlib/robocommander.git"
