--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "http": "^0.0.0",
     "https": "^1.0.0",
     "jsonfile": "^2.4.0",
+    "jsonic": "^0.3.1",
     "libxmljs": "^0.18.7",
     "neo4j-driver": "^1.5.3",
     "node-blockly": "^1.0.34",
