can now connect from non-local machine (fixed bug). updated electron to address security warning. can build from windows.

--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "@types/request": "^2.47.0",
     "@types/ws": "^4.0.1",
     "babel-preset-react": "^6.24.1",
-    "electron": "1.8.3",
-    "electron-builder": "^20.0.6",
+    "electron": "^4.0.8",
+    "electron-builder": "^20.38.5",
     "electron-webpack": "^1.13.0",
     "electron-webpack-ts": "^1.4.0",
     "typescript": "^2.7.2",
